--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "eslint-plugin-node": "^5.1.0",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^3.0.1"
+  },
+  "dependencies": {
+    "mosca": "^2.5.1"
   }
 }
