--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "mongoose": "^4.11.1",
-    "mosca": "^2.5.1"
+    "mosca": "^2.5.1",
+    "winston": "^2.3.1"
   }
 }
