--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "mongoose": "^4.11.1",
     "mosca": "^2.5.1",
+    "random-js": "^1.0.8",
     "winston": "^2.3.1"
   }
 }
