--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-plugin-standard": "^3.0.1"
   },
   "dependencies": {
+    "config": "^1.26.1",
     "mongoose": "^4.11.1",
     "mosca": "^2.5.1",
     "random-js": "^1.0.8",
